PHP Build Docker images creation scripts

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -14,19 +14,19 @@ databasePath = /var/lib/homegear/db.sql
 # If databaseMemoryJournal is set to true database write operations are faster but if your system
 # suffers a power loss the database might get corrupted.
 # Default: databaseMemoryJournal = true
-databaseMemoryJournal = true;
+databaseMemoryJournal = true
 
 # If databaseSynchronous is set to false database write operations are faster but if your system
 # suffers a power loss the database might get corrupted.
 # Default: databaseSynchronous = false
-databaseSynchronous = false;
+databaseSynchronous = false
 
 # Default: logfilePath = /var/log/homegear
 logfilePath = /var/log/homegear
 
 # Enable 
 # Default: enableUPnP = true
-enableUPnP = true;
+enableUPnP = true
 
 # Sets the IP address, the UPnP server listens on. By default auto discovery is used, but this might not work,
 # if multiple interfaces exist.
