--- a/debian/rules
+++ b/debian/rules
@@ -85,8 +85,8 @@ override_dh_auto_install:
 	chown root:root $(CURDIR)/debian/homegear/var/lib/homegear/DeviceTypePatch.patch
 	chmod 644 $(CURDIR)/debian/homegear/var/lib/homegear/DeviceTypePatch.patch
 	
-override_dh_shlibdeps:
-	dh_shlibdeps -l/usr/lib/php5 --dpkg-shlibdeps-params=--ignore-missing-info
+# override_dh_shlibdeps:
+#	dh_shlibdeps -l/usr/lib/php5 --dpkg-shlibdeps-params=--ignore-missing-info
 	
 %:
 	dh $@
