MQTT SSL support

--- a/Miscellaneous/mqtt.conf
+++ b/Miscellaneous/mqtt.conf
@@ -19,3 +19,30 @@ clientName = Homegear
 # Unique ID of this Homegear instance. Change this, have you have multiple
 # Homegear installations.
 homegearId = 1234-5678-9abc
+
+# When authentication by username and password is enabled, uncomment the
+# following two lines.
+#userName = myUser
+#password = myPassword
+
+### TLS options ###
+
+# Set to "true" to enable SSL encryption for MQTT.
+enableSSL = false
+
+# The path to the certificate authority's certificate
+#caFile = /path/to/ca-certficate
+
+# verifyCertificate checks if the server certificate received by the
+# MQTT broker is signed by one of the root CAs in /etc/ssl/certs. If you use
+# a self signed certificate, please put your root certificate in that
+# directory. Only disable the verification for testing purposes. Without
+# verification any attacker can pose as your MQTT broker.
+# Default: verifyCertificate = true
+#verifyCertificate = true
+
+# The path to the PEM encoded client certificate.
+#certPath = /etc/homegear/mqtt.crt
+
+# The path to the PEM encoded client keyfile.
+#keyPath = /etc/homegear/mqtt.key
