--- a/Miscellaneous/rpcservers.conf
+++ b/Miscellaneous/rpcservers.conf
@@ -24,8 +24,9 @@ webServer = true
 contentPath = /var/lib/homegear/www/rpc
 
 # Enable Homegear's build-in WebSocket server on this port
+# WARNING: Enabling Websockets without authentication is a high security risk!
 # Default: false
-webSocket = true
+webSocket = false
 
 # Set ssl to "true" to enable SSL support
 ssl = false
@@ -62,8 +63,9 @@ webServer = true
 contentPath = /var/lib/homegear/www/rpc
 
 # Enable Homegear's build-in WebSocket server on this port
+# WARNING: Enabling Websockets without authentication is a high security risk!
 # Default: false
-webSocket = true
+webSocket = false
 
 # Set ssl to "true" to enable SSL support
 ssl = true
