--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -13,13 +13,13 @@ databasePath = /var/lib/homegear/db.sql
 
 # If databaseMemoryJournal is set to true database write operations are faster but if your system
 # suffers a power loss the database might get corrupted.
-# Default: databaseMemoryJournal = true
-databaseMemoryJournal = true
+# Default: databaseMemoryJournal = false
+databaseMemoryJournal = false
 
 # If databaseSynchronous is set to false database write operations are faster but if your system
 # suffers a power loss the database might get corrupted.
-# Default: databaseSynchronous = false
-databaseSynchronous = false
+# Default: databaseSynchronous = true
+databaseSynchronous = true
 
 # Default: logfilePath = /var/log/homegear
 logfilePath = /var/log/homegear
