Added WAL database journal mode

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -16,10 +16,20 @@ databasePath = /var/lib/homegear/db.sql
 # Default: databaseMemoryJournal = false
 databaseMemoryJournal = false
 
+# If databaseWALJournal is set to true database write operations are faster. This is more secure than
+# settings databaseMemoryJournal. databaseWALJournal and databaseMemoryJournal cannot be used together.
+# Default: databaseWALJournal = true
+databaseWALJournal = true
+
 # If databaseSynchronous is set to false database write operations are faster but if your system
 # suffers a power loss the database might get corrupted.
 # Default: databaseSynchronous = true
 databaseSynchronous = true
+
+# databaseMaxBackups defines the maximum number of database backups to create. When this number is reached,
+# old backups are deleted.
+# Default: databaseMaxBackups = 10
+databaseMaxBackups = 10
 
 # Default: logfilePath = /var/log/homegear
 logfilePath = /var/log/homegear
