--- a/debian/rules
+++ b/debian/rules
@@ -87,6 +87,9 @@ override_dh_auto_install:
 	
 # override_dh_shlibdeps:
 #	dh_shlibdeps -l/usr/lib/php5 --dpkg-shlibdeps-params=--ignore-missing-info
+
+override_dh_strip:
+        dh_strip --dbg-package=homegear
 	
 %:
 	dh $@
