--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Sathya Laufer <sathya@laufers.net>
 Section: misc
 Priority: optional
 Standards-Version: 3.9.5
-Build-Depends: debhelper (>= 8), libsqlite3-dev (>= 3.7.13), libreadline6-dev (>= 6.2), libgcrypt20-dev, libgpg-error-dev (>= 1.10), libgnutls28-dev, php5-dev (>= 5.6)
+Build-Depends: debhelper (>= 8), libsqlite3-dev (>= 3.7.13), libreadline6-dev (>= 6.2), libgcrypt20-dev, libgpg-error-dev (>= 1.10), libgnutls28-dev, libphp5-embed (>= 5.6), php5-dev (>= 5.6)
 Homepage: https://homegear.eu
 
 Package: homegear
