RPC init localhost from remote host fix

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -110,6 +110,15 @@ firmwarePath = /var/lib/homegear/firmware
 # redirectToSSHTunnel = 192.168.0.10
 # redirectToSSHTunnel = MyHostname
 
+# Some clients (like the CCU2) send localhost as address to a remote Homegear
+# installation. Homegear then tries to connect to localhost which of course
+# fails. As a workaround Homegear can replace the address sent from the client
+# with a working address.
+#                                Address to search for          Address to use
+#                                          |                           |
+#                                          V                           V
+# replaceClientServerAddress = http://127.0.0.1:9292/RPC http://192.168.0.23:9292/RPC
+
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
