RPC client address replacement improvements (remote CCU2 support)

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -113,11 +113,12 @@ firmwarePath = /var/lib/homegear/firmware
 # Some clients (like the CCU2) send localhost as address to a remote Homegear
 # installation. Homegear then tries to connect to localhost which of course
 # fails. As a workaround Homegear can replace the address sent from the client
-# with a working address.
+# with a working address. $REMOTEIP is replaced automatically with the remote ip
+# address.
 #                                Address to search for          Address to use
 #                                          |                           |
 #                                          V                           V
-# replaceClientServerAddress = http://127.0.0.1:9292/RPC http://192.168.0.23:9292/RPC
+replaceClientServerAddress = xmlrpc_bin://127.0.0.1:1999 xmlrpc_bin://$REMOTEIP:1999
 
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
