--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -39,7 +39,7 @@ logfilePath = /var/log/homegear
 enableUPnP = true
 
 # Sets the IP address, the UPnP server listens on. By default auto discovery is used, but this might not work,
-# if multiple interfaces exist.
+# if multiple interfaces exist. Only set specific IP addresses not "0.0.0.0".
 # Default: uPnPIpAddress =
 # uPnPIpAddress = 
 
@@ -119,6 +119,7 @@ firmwarePath = /var/lib/homegear/firmware
 #                                          |                           |
 #                                          V                           V
 replaceClientServerAddress = xmlrpc_bin://127.0.0.1:1999 xmlrpc_bin://$REMOTEIP:1999
+replaceClientServerAddress = http://127.0.0.1:9292/bidcos http://$REMOTEIP:9292/bidcos
 
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
 #### !!!Don't change settings below unless you know exactly what you're doing!!! ####
