--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -43,6 +43,11 @@ enableUPnP = true
 # Default: uPnPIpAddress =
 # uPnPIpAddress = 
 
+# Sets the IP address, the SSDP server listens on. By default auto discovery is used, but this might not work,
+# if multiple interfaces exist. Only set specific IP addresses not "0.0.0.0".
+# Default: ssdpIpAddress =
+# ssdpIpAddress = 
+
 #### SSL options ####
 # You can create a new certificate pair with:
 # openssl genrsa -out /etc/homegear/homegear.key 2048
