--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -416,3 +416,30 @@ ___________________________________________________________________________
 
 ## Should be "100" for Philips hue
 #responseDelay = 100
+
+___________________________________________________________________________
+
+---------------------------------- Sonos ----------------------------------
+___________________________________________________________________________
+
+#######################################
+############ Event Server  ############
+#######################################
+
+## The device family this interface is for
+#[Sonos]
+
+## Specify an unique id here to identify this device in Homegear
+## This identifier is also used as the bridge user name and "password".
+#id = My-Sonos-1234
+
+## Options: eventserver
+#deviceType = eventserver
+
+## Listen IP address of the event server. Don't use "0.0.0.0" or
+## "127.0.0.1". By default auto discovery is used.
+#host = 
+
+## Port number the event server should listen on.
+## Default: 7373
+#port = 7373
