--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -146,8 +146,8 @@ rpcServerThreadPriority = 0
 # Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
 rpcServerThreadPolicy = SCHED_OTHER
 
-# Default: rpcClientMaxThreads = 50
-rpcClientMaxThreads = 50
+# Default: rpcClientMaxServers = 50
+rpcClientMaxServers = 50
 
 # Default: rpcClientThreadPriority = 0
 rpcClientThreadPriority = 0
