--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -104,6 +104,10 @@ modulePath = /var/lib/homegear/modules
 # Default: firmwarePath = /var/lib/homegear/firmware
 firmwarePath = /var/lib/homegear/firmware
 
+# Path to a directory where Homegear can store temporary data
+# Default: tempPath = /var/lib/homegear/tmp
+tempPath = /var/lib/homegear/tmp
+
 # Some clients don't provide the option to set their hostname to 
 # "localhost" or "127.0.0.1" so a SSH tunnel normally wouldn't work.
 # To redirect communication to a client's XML RPC event server through a
