--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -443,3 +443,15 @@ ___________________________________________________________________________
 ## Port number the event server should listen on.
 ## Default: 7373
 #port = 7373
+
+## Program or script to generate TTS wave file or mp3. Homegear passes two
+## parameters:
+## 1. The language ("en", "de", "fr", "es", ...)
+## 2. The text to convert
+## 
+## The script/program must store the generated audio file in the subfolder
+## "sonos/LANGUAGE/" of Homegear's temp directory. By default for English
+## that's: /var/lib/homegear/tmp/sonos/en/YourTTSFile.mp3
+## After that the script/program must output the filename (and nothing
+## else).
+#ttsProgram = php /var/lib/homegear/scripts/DeviceScripts/Sonos/GoogleTTS.php
