--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -455,3 +455,6 @@ ___________________________________________________________________________
 ## After that the script/program must output the filename (and nothing
 ## else).
 #ttsProgram = php /var/lib/homegear/scripts/DeviceScripts/Sonos/GoogleTTS.php
+
+## Sonos data path. Here you can place your audio files.
+#dataPath = /var/lib/homegear/audio
