New feature: Save new XML format (needed for converter)

--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -31,7 +31,7 @@ webSocket = false
 # Set ssl to "true" to enable SSL support
 ssl = false
 
-# You can specify the HTTP authentication type your XML RPC event server
+# You can specify the HTTP authentication type your XML RPC server
 # uses here. Never ever use basic auth over an unencrypted connection!
 # Can be one of the following: none, basic
 # Default: authType = basic
@@ -70,11 +70,19 @@ webSocket = false
 # Set ssl to "true" to enable SSL support
 ssl = true
 
-# You can specify the HTTP authentication type your XML RPC event server
+# You can specify the HTTP authentication type your XML RPC server
 # uses here.
 # Can be one of the following: none, basic
 # Default: authType = basic
 authType = none
+
+# You can specify the websocket authentication type here. Never ever use basic auth
+# over an unencrypted connection!
+# Can be one of the following: none, basic, session
+# "session" checks for the PHP session variable "authorized", which must be set to
+# "true" for the authentication to succeed.
+# Default: authType = session
+webSocketAuthType = session
 
 # The size in bit of the temporary Diffie-Hellman parameters generated at start up.
 # This setting is ignored when Diffie-Hellman parameters are read from file.
@@ -114,11 +122,19 @@ webSocket = true
 # Set ssl to "true" to enable SSL support
 ssl = true
 
-# You can specify the HTTP authentication type your XML RPC event server
+# You can specify the HTTP authentication type your XML RPC server
 # uses here.
 # Can be one of the following: none, basic
 # Default: authType = basic
 authType = basic
+
+# You can specify the websocket authentication type here. Never ever use basic auth
+# over an unencrypted connection!
+# Can be one of the following: none, basic, session
+# "session" checks for the PHP session variable "authorized", which must be set to
+# "true" for the authentication to succeed.
+# Default: authType = session
+webSocketAuthType = session
 
 # The size in bit of the temporary Diffie-Hellman parameters generated at start up.
 # This setting is ignored when Diffie-Hellman parameters are read from file.
