New feature: Save new XML format (needed for converter)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Compiled Object files
 *.slo
 *.lo
+*.Po
 *.o
 *.obj
 # Precompiled Headers
@@ -51,3 +52,4 @@ local.properties
 autom4te.cache
 *.in~
 config.log
+/homegear
