--- a/homegear-miscellaneous/src/Makefile.in
+++ b/homegear-miscellaneous/src/Makefile.in
@@ -351,9 +351,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu homegear-miscellaneous/src/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign homegear-miscellaneous/src/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu homegear-miscellaneous/src/Makefile
+	  $(AUTOMAKE) --foreign homegear-miscellaneous/src/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
